--- a/gallary.html
+++ b/gallary.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/background.css">
     <link rel="stylesheet" type="text/css" href="css/scrollbar.css">
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
-    <link rel="stylesheet" type="text/css" href="css/table.css">
     <link rel="stylesheet" type="text/css" href="css/gallary.css">
-    <title>Earth - About</title>
+    <title>Earth - Gallary</title>
   </head>
   <body>
-
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <nav>
 
       <ul class="navigation">
@@ -26,7 +29,7 @@
 
     <div class="occupy"></div>
 
-    <div class="gridcontainer" id="myDiv">
+    <div class="gridcontainer" id="main">
       
         <div class="box" id = "image">
 			    Hover over an image below.
