--- a/others.html
+++ b/others.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/0fca72bfa2.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/form.css">
     <link rel="stylesheet" type="text/css" href="css/background.css">
@@ -15,7 +19,7 @@
     <title>Earth - Others</title>
   </head>
   <body>
-
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <nav>
 
       <ul class="navigation">
@@ -23,13 +27,13 @@
         <li><a class="page" href="about.html">About Earth</a></li>
         <li><a class="page" href="neighbors.html">Earth's Neighbors</a></li>
         <li><a class="page" href="gallary.html">Gallary</a></li>
-        <li class="here"><a class="page" href="#">Others</a></li>
+        <li class="here"><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
 
     <div class="occupy"></div>
 
-    <div class="gridcontainer">
+    <div class="gridcontainer" id="main">
       <div class="flexcontainer">
           <div class='text box flexcontainer' tabindex="0" id="P1">
               <img src="images/others/hurricane_felix.jpg" alt="hazards">
@@ -41,25 +45,25 @@
                 </div>  
           </div>
         <div class='text box contact' tabindex="0" id="P2">
-          <form class="form-horizontal" method="post">
+          <form class="form-horizontal" action="https://formspree.io/xpzabang" method="post">
               <fieldset>
                   <legend class="text-center header"><h1>Contact us</h1></legend>
 
                   <div class="form-group">
-                      <label for="fname"><span aria-label="Enter your first name"><i class="fa fa-user bigicon" aria-hidden="true"></i></span></label>
+                      <label for="fname"><span aria-label="Enter your first name"><i class="fa fa-user bigicon" aria-hidden="true"></i>First Name</span></label>
                       <div>
                           <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
                       </div>
                   </div>
                   <div class="form-group">
-                      <label for="lname"><span><i class="fa fa-user bigicon"></i></span></label>
+                      <label for="lname"><span><i class="fa fa-user bigicon"></i>Last Name</span></label>
                       <div>
                           <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
                       </div>
                   </div>
 
                   <div class="form-group">
-                      <label for="email"><span><i class="fa fa-paper-plane bigicon"></i></span></label>
+                      <label for="email"><span><i class="fa fa-paper-plane bigicon"></i>Email</span></label>
                       <div>
                           <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
                       </div>
@@ -67,7 +71,7 @@
 
 
                   <div class="form-group">
-                      <label for="message"><span><i class = "fas fa-pencil-alt bigicon"></i></span></label>
+                      <label for="message"><span><i class = "fas fa-pencil-alt bigicon"></i>Message</span></label>
                       <div>
                           <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."></textarea>
                       </div>
