--- a/others.html
+++ b/others.html
@@ -17,6 +17,14 @@
     <link rel="stylesheet" type="text/css" href="css/scrollbar.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Earth - Others</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151638485-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-151638485-1');
+    </script>
   </head>
   <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
