--- a/gallary.html
+++ b/gallary.html
@@ -40,7 +40,7 @@
     <div class="gridcontainer" id="main">
       
         <div class="box" id = "image">
-			    Hover over an image below.
+			    Hover over an image.
 		    </div>
         <div class="preview_gallary">
             <img class = "preview" 
