--- a/neighbors.html
+++ b/neighbors.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/background.css">
     <link rel="stylesheet" type="text/css" href="css/scrollbar.css">
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
-    <link rel="stylesheet" type="text/css" href="css/table.css">
+    <link rel="stylesheet" type="text/css" href="css/neighbors.css">
     <title>Earth - Neighbors</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151638485-1"></script>
@@ -142,8 +142,15 @@
         <div class='contenttabel'>
 	         <div class='contenttabel-head'>Content</div>
             <a href="#P1" class='contenttabel-body'>Overview</a>
-            <a href="#P2" class='contenttabel-body'>Inner Solar System</a>
-            <a href="#P7" class='contenttabel-body'>Outer Solar System</a>
+            <a href="#P2" class='contenttabel-body'>Sun</a>
+            <a href="#P3" class='contenttabel-body'>Mercury</a>
+            <a href="#P4" class='contenttabel-body'>Venus</a>
+            <a href="#P5" class='contenttabel-body'>Moon</a>
+            <a href="#P6" class='contenttabel-body'>Mars</a>
+            <a href="#P7" class='contenttabel-body'>Jupiter</a>
+            <a href="#P8" class='contenttabel-body'>Saturn</a>
+            <a href="#P9" class='contenttabel-body'>Uranus</a>
+            <a href="#P10" class='contenttabel-body'>Neptune</a>
         </div>
 
     </div>
