--- a/gallary.html
+++ b/gallary.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
+    <header class="hit-the-floor">🜨 Earth - Explore the unkown!</header>
     <nav>
 
       <ul class="navigation">
@@ -34,8 +35,6 @@
         <li><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
-
-    <div class="occupy"></div>
 
     <div class="gridcontainer" id="main">
       
