--- a/others.html
+++ b/others.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
+    <header class="hit-the-floor">🜨 Earth - Explore the unkown!</header>
     <nav>
 
       <ul class="navigation">
@@ -38,8 +39,6 @@
         <li class="here"><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
-
-    <div class="occupy"></div>
 
     <div class="gridcontainer" id="main">
       <div class="flexcontainer">
@@ -103,7 +102,7 @@
               </li>
               <li class="reference">
               <a href="https://en.wikipedia.org/wiki/Earth">
-              [2] <cite>"Earth", Wikipedia, https://en.wikipedia.org/wiki/Earth</cite>
+              [2] <cite>"Solar system", Wikipedia, https://en.wikipedia.org/wiki/Solar_System</cite>
               </a>
               </li>
               <li class="reference"> 
