--- a/neighbors.html
+++ b/neighbors.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
-    <header class="hit-the-floor">🜨 Earth - Explore the unkown!</header>
+    <header class="hit-the-floor">🌎 Earth - Explore the unkown!</header>
     <nav>
 
       <ul class="navigation">
