--- a/gallary.html
+++ b/gallary.html
@@ -35,8 +35,9 @@
         <li><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
-
-    <div class="gridcontainer" id="main">
+    <main id="main">
+      <h1 id="heading">Gallary </h1>
+    <div class="gridcontainer">
       
         <div class="box" id = "image">
 			    Hover over an image.
@@ -88,6 +89,7 @@
     </div>
 
     <div class="occupy"></div>
+    </main>
 
     <footer>
       <p class="box">&copy;2019 theoliao <br/>
