--- a/others.html
+++ b/others.html
@@ -29,6 +29,7 @@
   <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header class="hit-the-floor">🌎 Earth - Explore the unkown!</header>
+    
     <nav>
 
       <ul class="navigation">
@@ -39,8 +40,8 @@
         <li class="here"><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
-
-    <div class="gridcontainer" id="main">
+    <main id="main">
+    <div class="gridcontainer">
       <div class="flexcontainer">
           <div class='text box flexcontainer' tabindex="0" id="P1">
               <img src="images/others/hurricane_felix.jpg" alt="hazards">
@@ -78,7 +79,7 @@
 
 
                   <div class="form-group">
-                      <label for="message"><span><i class = "fas fa-pencil-alt bigicon"></i>Message</span></label>
+                      <label for="message"><span><i class = "fas fa-pencil-alt bigicon"></i>Text</span></label>
                       <div>
                           <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."></textarea>
                       </div>
@@ -126,7 +127,7 @@
     </div>
 
     <div class="occupy"></div>
-
+    </main>
     <footer>
       <p class="box">&copy;2019 theoliao <br/>
         theoliao1998@gmail.com</p>
