--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
         <li><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
-
-    <div class="gridcontainer" id="main">
+    <main  id="main">
+    <div class="gridcontainer">
       <div class="flexcontainer">
         <div class='text box flexcontainer' tabindex="0" id="P1">
               <div>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="occupy"></div>
-
+    </main>
     <footer>
       <p class="box">&copy;2019 theoliao <br/>
         theoliao1998@gmail.com</p>
