--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
               <img src="images/about/earth.jpg" alt="earth">
         </div>
         <div class='text box flexcontainer' tabindex="0" id="P2">
-            <img src="images/about/habitability.jpg" alt="habitability">
+            <img src="images/about/habitability.jpg" alt="habitability" id="widest">
             <div>
                 <h1>Habitability</h1>
                 <p>A planet that can sustain life is termed habitable, even if life did not originate there. Earth provides liquid water—an environment where complex organic molecules can assemble and interact, and sufficient energy to sustain metabolism. The distance of Earth from the Sun, as well as its orbital eccentricity, rate of rotation, axial tilt, geological history, sustaining atmosphere, and magnetic field all contribute to the current climatic conditions at the surface.
