--- a/neighbors.html
+++ b/neighbors.html
@@ -108,7 +108,7 @@
       </div>
     
     <div class='text box flexcontainer' tabindex="0" id="P8">
-        <img src="images/neighbors/saturn.jpg" alt="saturn">
+        <img src="images/neighbors/saturn.jpg" alt="saturn" id="widest">
         <div>
             <h1>Saturn</h1>
             <p>
