--- a/others.html
+++ b/others.html
@@ -44,7 +44,7 @@
     <div class="gridcontainer">
       <div class="flexcontainer">
           <div class='text box flexcontainer' tabindex="0" id="P1">
-              <img src="images/others/hurricane_felix.jpg" alt="hazards">
+              <img src="images/others/hurricane_felix.jpg" alt="hazards" id="widest">
               <div>
                   <h1>Hazards</h1>
                   <p>
