--- a/neighbors.html
+++ b/neighbors.html
@@ -42,10 +42,11 @@
               <div>
                 <h1>Overview</h1>
                 <p>
-                As part of the solar system, Earth has lived with 7 other other big planets, the sun, and the moon for billions of years. 
+                As part of the solar system, Earth has lived with 7 other other big planets, the sun, and the moon for billions of years.<br><br><br><br>
                 </p>
                 <div class="overview">
                 </div>
+                <img src="images/neighbors/overview.jpg" alt="sun" id="overview">
               </div>
         </div>
         <div class='text box flexcontainer' tabindex="0" id="P2">
