--- a/others.html
+++ b/others.html
@@ -81,7 +81,7 @@
                   <div class="form-group">
                       <label for="message"><span><i class = "fas fa-pencil-alt bigicon"></i>Text</span></label>
                       <div>
-                          <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."></textarea>
+                          <textarea class="form-control" id="message" name="message" placeholder="Leave your massage here."></textarea>
                       </div>
                   </div>
 
