--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/background.css">
-    <link rel="stylesheet" type="text/css" href="css/scrollbar.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/scrollbar.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
     <link rel="stylesheet" type="text/css" href="css/table.css">
     <title>Earth - About</title>
