--- a/others.html
+++ b/others.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/form.css">
     <link rel="stylesheet" type="text/css" href="css/background.css">
-    <link rel="stylesheet" type="text/css" href="css/scrollbar.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/scrollbar.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Earth - Others</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
