--- a/others.html
+++ b/others.html
@@ -64,14 +64,14 @@
                       </div>
                   </div>
                   <div class="form-group">
-                      <label for="lname"><span><i class="fa fa-user bigicon"></i>Last Name</span></label>
+                      <label for="lname"><span aria-label="Enter your last name"><i class="fa fa-user bigicon"></i>Last Name</span></label>
                       <div>
                           <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
                       </div>
                   </div>
 
                   <div class="form-group">
-                      <label for="email"><span><i class="fa fa-paper-plane bigicon"></i>Email</span></label>
+                      <label for="email"><span aria-label="Enter your email address"><i class="fa fa-paper-plane bigicon"></i>Email</span></label>
                       <div>
                           <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
                       </div>
@@ -79,7 +79,7 @@
 
 
                   <div class="form-group">
-                      <label for="message"><span><i class = "fas fa-pencil-alt bigicon"></i>Text</span></label>
+                      <label for="message"><span aria-label="Enter your message"><i class = "fas fa-pencil-alt bigicon"></i>Text</span></label>
                       <div>
                           <textarea class="form-control" id="message" name="message" placeholder="Leave your massage here."></textarea>
                       </div>
@@ -102,7 +102,7 @@
                 </a>
               </li>
               <li class="reference">
-              <a href="https://en.wikipedia.org/wiki/Earth">
+              <a href="https://en.wikipedia.org/wiki/Solar_System">
               [2] <cite>"Solar system", Wikipedia, https://en.wikipedia.org/wiki/Solar_System</cite>
               </a>
               </li>
