--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="here"><a class="page" href="index.html">Home</a></li>
         <li><a class="page" href="about.html">About Earth</a></li>
         <li><a class="page" href="neighbors.html">Earth's Neighbors</a></li>
-        <li><a class="page" href="gallary.html">Gallary</a></li>
+        <li><a class="page" href="gallery.html">Gallery</a></li>
         <li><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
@@ -62,7 +62,7 @@
       <div class="flip-card box" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front" id="flip-card-neighbors">
-            <span>Earth's Neighbors"</span>
+            <span>Earth's Neighbors</span>
           </div>
           <a class="flip-card-back" href="neighbors.html">
             Earth's Neighbors
@@ -72,11 +72,11 @@
 
       <div class="flip-card box" tabindex="0">
         <div class="flip-card-inner">
-          <div class="flip-card-front" id="flip-card-gallary">
-            <span>Gallary</span>
+          <div class="flip-card-front" id="flip-card-gallery">
+            <span>Gallery</span>
           </div>
-          <a class="flip-card-back" href="gallary.html">
-            Gallary
+          <a class="flip-card-back" href="gallery.html">
+            Gallery
           </a>
         </div>
       </div>
@@ -84,7 +84,7 @@
       <div class="flip-card box" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front" id="flip-card-others">
-            <span>Others"</span>
+            <span>Others</span>
           </div>
           <a class="flip-card-back" href="others.html">
             Others
