--- a/neighbors.html
+++ b/neighbors.html
@@ -31,7 +31,7 @@
         <li><a class="page" href="index.html">Home</a></li>
         <li><a class="page" href="about.html">About Earth</a></li>
         <li class="here"><a class="page" href="neighbors.html">Earth's Neighbors</a></li>
-        <li><a class="page" href="gallary.html">Gallary</a></li>
+        <li><a class="page" href="gallery.html">Gallery</a></li>
         <li><a class="page" href="others.html">Others</a></li>
       </ul>
     </nav>
